Improved a few little things that were bugging me